[package]
name = "pubtrust-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
crossterm = "0.27.0"
rmp-serde = "1.3.0"
rumqttc = "0.24.0"
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4.21"
openssl = { version = "0.10", features = ["vendored"] }
home = "0.5.9"
serde_json = "1.0.117"
serde_with = "3.8.1"
base64 = "0.22.1"
nanoid = "0.4.0"
clap = { version = "4.5.4", features = ["derive"] }
